# pytwitcasapi

./: .gitignore  LICENSE  README.md  pyproject.toml
test/: config.py  test_user.py  test_webhook.py  webhook.json
twitcasting/: exceptions.py  movie.py  user.py  webhook.py
