[project]
name = "twitcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "soramikan", email = "80459567+soramikan@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]
